--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
     <section class="hero">
       <div class="hero-img">
         <picture>
-          <source media="(min-width: 1024px)" srcset="assets/images/image-web-3-desktop.jpg">
+          <source media="(min-width: 1440px)" srcset="assets/images/image-web-3-desktop.jpg">
           <img srcset="assets/images/image-web-3-mobile.jpg">
         </picture>
+        <div class="hero-content">
+          <div><h1>The Bright Future of Web 3.0?</h1></div>
+          <div class="hero-text">
+          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+          <button>READ MORE</button>
+        </div>
+        </div>
       </div>
-      <div class="hero-title">
-        <h1>The Bright Future of Web 3.0?</h1>
-      </div>
-      <div class="hero-text">
-        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
-        <button>READ MORE</button>
-      </div>
+      
       <div class="hero-new-container">
         <h2>New</h2>
         <div>
